syntax = "proto3";

package s12.example;

import "example2.proto";

option go_package = "main";

service ExampleService {
    rpc ExampleOne(ExampleOneRequest) returns (ExampleOneResponse);
    rpc ExampleTwo(ExampleTwoRequest) returns (ExampleTwoResponse);
    rpc AlwaysError(ExampleOneRequest) returns (ExampleOneResponse);
}

message ExampleOneRequest {
    string msg = 1;
}

message ExampleOneResponse {
    string id = 1;
    string msg = 2;
}